fix: atualiza rota para PATCH /api/user/{id} e insere possibilidade de trocar foto de perfil de usuário
